--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -153,3 +153,9 @@ mark_guanghuilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3139.png'
 mark_global_yemu: 'https://seer2-resource.yuuinih.com/png/markImage/20009.png'
 mark_houkongfan: 'https://seer2-resource.yuuinih.com/png/markImage/3023.png'
 mark_xingzhihui: 'https://seer2-resource.yuuinih.com/png/markImage/3048.png'
+mark_pofang: 'https://seer2-resource.yuuinih.com/png/markImage/3076.png'
+mark_hongbaoshi: 'https://seer2-resource.yuuinih.com/png/markImage/3077.png'
+mark_lanbaoshi: 'https://seer2-resource.yuuinih.com/png/markImage/3078.png'
+mark_liuxingdun: 'https://seer2-resource.yuuinih.com/png/markImage/4004.png'
+mark_shahezhili: 'https://seer2-resource.yuuinih.com/png/markImage/3079.png'
+mark_shazhiwang: 'https://seer2-resource.yuuinih.com/png/markImage/3080.png'
