--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -419,3 +419,29 @@ skill_paoxiaodan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
 skill_yinbao: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_yinbofeidan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
 skill_yinzhiwang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_feishi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_pofangyiji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_suishituji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_liuxingchui: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_menglietu ji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_lieshichuanci: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_miaozhuntuji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_lanbaoshizhili: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_juchuidilichong: 'https://seer2-resource.yuuinih.com/sound/skill/10475.mp3'
+skill_liuxingdun: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_jiancizhibi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_suilietu ji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_julietuji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shachen: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shahezhiguang: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shachenfengbao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shahuangzhiqu: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_shazhiquti: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_zhimingshamo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shazhiwang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_hongbaoshizhiguang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_shahuangxiangyuewu: 'https://seer2-resource.yuuinih.com/sound/skill/10488.mp3'
+skill_haishishenglou: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shunxunzhiqu: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shazhihaixiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shahuangshuangshan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
