--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -5071,3 +5071,312 @@
   tags: []
   effect:
     - effect_skill_add_mark_foe_yinzhiwang
+- id: skill_feishi
+  element: Ground
+  category: Special
+  target: opponent
+  power: 60
+  accuracy: 100
+  rage: 5
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
+- id: skill_pofangyiji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_pofang_50
+- id: skill_suishituji
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_20_per_pofang_turn
+- id: skill_liuxingchui
+  element: Ground
+  category: Special
+  target: opponent
+  power: 100
+  accuracy: 90
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_min_damage_100
+- id: skill_menglietu ji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_20_per_pofang_turn
+- id: skill_lieshichuanci
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_liuxie_40_if_pofang
+- id: skill_miaozhuntuji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 100
+  rage: 20
+  sureHit: true
+  ignoreShield: false
+  tags: []
+- id: skill_lanbaoshizhili
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 10
+  accuracy: 100
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_lanbaoshi
+- id: skill_juchuidilichong
+  element: Ground
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_20_percent
+- id: skill_liuxingdun
+  element: Ground
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_liuxingdun
+- id: skill_jiancizhibi
+  element: Ground
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_jinzhenwayi
+- id: skill_suilietu ji
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_20_per_pofang_turn
+- id: skill_julietuji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_20_per_pofang_turn
+# 沙鹤系列技能
+- id: skill_shachen
+  element: Desert
+  category: Special
+  target: opponent
+  power: 55
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_5_percent
+- id: skill_shahezhiguang
+  element: Desert
+  category: Special
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shahezhili
+- id: skill_shachenfengbao
+  element: Desert
+  category: Special
+  target: opponent
+  power: 30
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_multihit_by_shahezhili_turns
+- id: skill_shahuangzhiqu
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_20_percent
+- id: skill_shazhiquti
+  element: Desert
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yinghua_50
+- id: skill_zhimingshamo
+  element: Desert
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_25_per_shahezhili_turn
+- id: skill_shazhiwang
+  element: Desert
+  category: Status
+  target: self
+  power: 0
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shazhiwang
+- id: skill_hongbaoshizhiguang
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 10
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_hongbaoshi
+- id: skill_shahuangxiangyuewu
+  element: Desert
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_20_percent
+- id: skill_haishishenglou
+  element: Desert
+  category: Status
+  target: opponent
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_mingzhongxiajiang_25
+- id: skill_shunxunzhiqu
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+- id: skill_shazhihaixiao
+  element: Desert
+  category: Special
+  target: opponent
+  power: 125
+  rage: 10
+  accuracy: 35
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_accuracy_25_per_shahezhili_turn
+- id: skill_shahuangshuangshan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 60
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  multihit: 2
+  tags: []
