resource: shanghaizengjia image

--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -159,3 +159,4 @@ mark_lanbaoshi: 'https://seer2-resource.yuuinih.com/png/markImage/3078.png'
 mark_liuxingdun: 'https://seer2-resource.yuuinih.com/png/markImage/4004.png'
 mark_shahezhili: 'https://seer2-resource.yuuinih.com/png/markImage/3079.png'
 mark_shazhiwang: 'https://seer2-resource.yuuinih.com/png/markImage/3080.png'
+mark_shanghaizengjia: 'https://seer2-resource.yuuinih.com/png/markImage/3016.png'
