--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -36,6 +36,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@faker-js/faker": "^9.8.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tsparticles/slim": "^3.8.1",
     "@vueuse/core": "^13.3.0",
     "@vueuse/sound": "^2.1.3",
     "axios": "^1.9.0",
