fix: mingzhongxiajiang stackStrategy

--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -378,7 +378,7 @@
     persistent: true
     maxStacks: 100
     stackable: true
-    stackStrategy: extend
+    stackStrategy: max
     destroyable: true
     keepOnSwitchOut: true
   effect:
