--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -36,7 +36,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@faker-js/faker": "^9.8.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tsparticles/engine": "^3.8.1",
     "@tsparticles/slim": "^3.8.1",
+    "@tsparticles/vue3": "^3.0.1",
     "@vueuse/core": "^13.3.0",
     "@vueuse/sound": "^2.1.3",
     "axios": "^1.9.0",
@@ -58,6 +60,7 @@
     "sortablejs": "^1.15.6",
     "sortablejs-vue3": "^1.2.11",
     "tailwindcss": "^4.1.10",
+    "tsparticles": "^3.8.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
     "yaml": "^2.8.0",
